<resources>
    <string name="app_name">EffectiveMobile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrance">Вход</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="hintInEditTextPassword">Введите пароль</string>
    <string name="haventAcc">Нет аккаунта? Регистрация</string>
    <string name="forgotPass">Забыли пароль</string>
    <string name="home">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="exam_search">Search courses...</string>
    <string name="exm_title">Java-разработчик с нуля</string>
    <string name="exm_description">Освойте backend-разработку и программирование на Java, фреймворки...</string>
    <string name="exm_price">999 ₽</string>
    <string name="details_btn">Подробнее →</string>
    <string name="by_date_added">По дате добавления</string>
    <string name="second_filtr">По убыванию даты публикации</string>
</resources>